--- a/css/base.css
+++ b/css/base.css
@@ -202,6 +202,9 @@ input[type="checkbox"] {
 .view-hide {
   visibility: hidden; }
 
+.over-flow {
+  overflow: hidden; }
+
 .float-r {
   float: right !important; }
 
