--- a/css/topbar.css
+++ b/css/topbar.css
@@ -14,6 +14,7 @@
 .topbar03 .iconfont {
   position: relative; }
 
+/*frame */
 /*----------------------------------------------------- */
 /* setting scss*/
 /*----------------------------------------------------- */
@@ -29,6 +30,7 @@
 .topbar03 .iconfont {
   position: relative; }
 
+/*frame */
 /* input set  start  */
 /* input set  end  */
 /*innerBanner01 start*/
@@ -511,91 +513,6 @@
   position: relative;
   top: 2px; }
 
-/* footer02 start */
-.footer02 {
-  box-sizing: content-box;
-  background: #fff;
-  text-align: left; }
-  .footer02 .footer-content .f-content {
-    float: left;
-    padding: 30px 0px;
-    box-sizing: content-box; }
-    .footer02 .footer-content .f-content:first-child {
-      padding-left: 0px;
-      text-align: left; }
-    .footer02 .footer-content .f-content.logo {
-      width: 380px;
-      padding-top: 50px; }
-    .footer02 .footer-content .f-content.address {
-      width: 384px;
-      padding-top: 45px;
-      font-size: 13px; }
-    .footer02 .footer-content .f-content:last-child {
-      padding-right: 0px;
-      text-align: right; }
-    .footer02 .footer-content .f-content.qr {
-      width: 122px;
-      float: right; }
-  .footer02 .copyRight {
-    background-color: #eee;
-    text-align: center;
-    padding: 8px 0; }
-
-/* footer02 end */
-/*footer01 start*/
-.footer01 {
-  box-sizing: content-box;
-  background: #393939;
-  padding-top: 38px;
-  color: #ebebeb;
-  text-align: left; }
-
-.footer01 .footer-link {
-  border-bottom: 1px solid #4d4d4d; }
-
-.footer01 .footer-link .fl01 {
-  color: #fff;
-  padding-left: 23px;
-  padding-right: 23px;
-  font-size: 14px;
-  padding-bottom: 10px;
-  display: block;
-  float: left; }
-
-.footer01 .footer-link .fl01:first-child {
-  padding-left: 0; }
-
-.footer01 .footer-content {
-  padding-top: 20px; }
-
-.footer01 .footer-content .f-content {
-  float: left;
-  padding: 30px 62px;
-  box-sizing: content-box; }
-
-.footer01 .footer-content .f-content:first-child {
-  padding-left: 0;
-  text-align: left; }
-
-.footer01 .footer-content .f-content:last-child {
-  padding-right: 0;
-  text-align: right; }
-
-.footer01 .footer-content .f-content.logo {
-  width: 243px;
-  padding-top: 50px;
-  border-right: 1px solid #4d4d4d; }
-
-.footer01 .footer-content .f-content.address {
-  width: 384px;
-  padding-top: 45px;
-  border-right: 1px solid #4d4d4d;
-  font-size: 13px; }
-
-.footer01 .footer-content .f-content.qr {
-  width: 122px; }
-
-/*footer01 end*/
 /*logoRow start*/
 .titleColor {
   color: #4a4a4a; }
