--- a/sass/mySassWare/variable.scss
+++ b/sass/mySassWare/variable.scss
@@ -46,12 +46,14 @@ $mainColor:#006acf;
 $mainBgColor:#f3f9fe;
 $contentBgColor:#f3f3f3;
 $little-gray:#f0f0f0;
+$super-gray0:#f6f6f6;
 $super-gray:#f7f7f8;
 $light-gray:#f8f8f8;
 $light-gray2:#f5f5f1;
 $gray:#999;
 $green:#6eb92b;
 $green2:#6bb033;
+$green3:#2fa689;
 $light-blue:#4aadff;
 $light-blue2:#54a4d5;
 $water-blue:#59a3d6;
@@ -87,6 +89,7 @@ $cyan:#f0f4f6;
 %super-gray{color:$super-gray;}
 %light-gray{color:$light-gray;}
 %light-green{color:$light-green;}
+
 %gray{color:$gray;}
 %orange{color:$orange;}
 %red{color:$red;}
@@ -138,7 +141,20 @@ $cyan:#f0f4f6;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
 }
-
+%singleLineJustify{
+    
+   text-align:justify;  
+   -moz-text-align-last:justify;  
+        text-align-last:justify;  
+   height:24px;  
+   &:after{  
+       /*  display:inline-block;  */ 
+        content:'';  
+        overflow:hidden;  
+        width:100%;  
+        height:0;  
+   }  
+}
 /* clearfix*/
 /* 闭合子元素的浮动*/
 @mixin clearfix {
