--- a/sass/web/sideBar.scss
+++ b/sass/web/sideBar.scss
@@ -1,76 +1,87 @@
-@import "variable";
+@import "../mySassWare/variable";
+@import "../mySassWare/mixin";
+@charset "utf-8";
 
-/*r-sider01 start*/
-.r-sider01{width:328px;}
-.r-sider01 .floor{width:100%;display: block;padding:19px 0;}
-.r-sider01 .floor:not(.bg-green){background:#f6f6f6;}
-.r-sider01 .floor .link{text-align: center;height: 55px;display: block;}
-
-.r-sider01 .floor.on{background-color: #6eb92b;}
-.r-sider01 .floor.on .link{color:#fff}
-.r-sider01 .floor.on .link .t01{color:#fff;}
-.r-sider01 .floor.on .link .t02{color:#fff;}
-
-.r-sider01 .floor .link .t01{font-size: 16px;color:#313131;}
-.r-sider01 .floor .link .t02{font-size: 12px;color:#c5c5c5;}
-.r-sider01 .floor .link .p-wrapper{
+/*l-sideBar04 start*/
+.l-sideBar04{
+  margin-top: -80px;
   position: relative;
-  top: 4px;
-    left: 10px;
-} 
+  z-index: 100;
+  .brand{
+    .title{
+      font-size: $bigTitle;
+    }
+    .text{
+      padding-top: 10px;
+      display: inline-block;
+      font-size: $smallSize;
+      color:#b8cebe;
+    }
+    text-align: center;
+    color:#fff;
+    padding:25px 0 20px;
+  }
 
-.r-sider01 .floor.bg-green .link,
-.r-sider01 .floor.bg-green .link .t01,
-.r-sider01 .floor.bg-green .link .t02{color:#fff;}
+  .floor .link{text-align: center;display: block;}
+  .floor .link .p-wrapper{display: inline-block;}
 
-.r-sider01 .floor.f00 .link{background:url(#{$baseImgUrl}sideBarbg03.png) no-repeat 50% 50%;line-height: 55px;}
-.r-sider01 .floor.f01 .link{background:url(#{$baseImgUrl}icon01.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f02 .link{background:url(#{$baseImgUrl}icon02.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f03 .link{background:url(#{$baseImgUrl}icon03.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f04 .link{background:url(#{$baseImgUrl}icon04.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f05 .link{background:url(#{$baseImgUrl}icon05.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f06 .link{background:url(#{$baseImgUrl}icon06.png) no-repeat 19% 50%;}
-
-.r-sider01 .floor.f01.on .link{background:url(#{$baseImgUrl}1.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f02.on .link{background:url(#{$baseImgUrl}2.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f03.on .link{background:url(#{$baseImgUrl}3.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f04.on .link{background:url(#{$baseImgUrl}4.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f05.on .link{background:url(#{$baseImgUrl}5.png) no-repeat 19% 50%;}
-.r-sider01 .floor.f06.on .link{background:url(#{$baseImgUrl}6.png) no-repeat 19% 50%;}
-
-.big-title{font-size: 25px;}
-
-/*01*//*.f02~*/.r-sider01 .floor:not(:last-child){border-bottom: 1px solid #ddd}
-
-/*r-sider01 end*/
-
-/*sbcontent02 start*/
-.sbcontent02{padding-top: 28px;}
-.sbcontent02 .abtn-wrapper{
-  float: left;
-  width:33.33%;height: 100px;
-}
-.sbcontent02 .a02-btn{
-  height: 100%;
-  width:100%;
-  text-align: center;
-    line-height: 160px; 
+  .floor{
+    text-align: center;
     display: block;
+    background:$super-gray0;
+    .t01{font-size: 13px;height: 30px;line-height: 30px;}
+    .t02{text-align: left;color:#b7d99f;}
+  }
+
+  .childList.sideBar_a.on{
+    .t01{
+      background:url(../img/sb-r-arrow.png) no-repeat 95% 50%;
+    }
+  }
+
+  .level1{
+    color:#000;
+    &>.sideBar_a{
+      $persuLeft:0.08;
+      &.on,&.current{
+        background-color: $green3;
+        .t01{color:#fff;  }
+        @include persudo($color:#dbdbdb,$content:"",$position:before,$bg:none){
+          top:0;
+          left:percentage($persuLeft);
+          width:percentage(1 - $persuLeft*2);
+          border-top: 1px solid transparent;
+        };
+      }
+      padding:15px 0;
+
+      @include persudo($color:#dbdbdb,$content:"",$position:before,$bg:none){
+        top:0;
+        left:percentage($persuLeft);
+        width:percentage(1 - $persuLeft*2);
+        border-top: 1px solid #dcdcdc;
+      };
+
+    }
+    .t01{font-size:$mediumSize;}
+  }
+  .level2{
+
+    .t01{color:$gray}
+  }
+  .sideBar_li{
+    background:$super-gray0;
+
+  }
+
+  .border{height: 4px;width: 100%}
+  img{
+    width: 100%;
+    display: block;
+  }
 }
-.sbcontent02 .abtn-wrapper.on{color:#fff;background-color: #6eb92b;}
-.sbcontent02 .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn01.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn02.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn03.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn04.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn05.png) no-repeat 47% 35%;    }
-.sbcontent02 .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn06.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn001.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn002.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn003.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn004.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn005.png) no-repeat 47% 35%;    }
-.sbcontent02 .abtn-wrapper.on .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn006.png) no-repeat 47% 35%;    }
-/*sbcontent02 end*/
+/*l-sideBar04 end*/
+
 
 @mixin sideBar($position,$num){
   $p:"";
@@ -172,4 +183,79 @@
 .l-sider01 .border{height: 4px;width: 100%}
 .l-sider01 img{width: 100%;display: block;}
 /*l-sider01 end*/
+
+
+
+
+/*r-sider01 start*/
+.r-sider01{width:328px;}
+.r-sider01 .floor{width:100%;display: block;padding:19px 0;}
+.r-sider01 .floor:not(.bg-green){background:#f6f6f6;}
+.r-sider01 .floor .link{text-align: center;height: 55px;display: block;}
+
+.r-sider01 .floor.on{background-color: #6eb92b;}
+.r-sider01 .floor.on .link{color:#fff}
+.r-sider01 .floor.on .link .t01{color:#fff;}
+.r-sider01 .floor.on .link .t02{color:#fff;}
+
+.r-sider01 .floor .link .t01{font-size: 16px;color:#313131;}
+.r-sider01 .floor .link .t02{font-size: 12px;color:#c5c5c5;}
+.r-sider01 .floor .link .p-wrapper{
+  position: relative;
+  top: 4px;
+  left: 10px;
+}
+
+.r-sider01 .floor.bg-green .link,
+.r-sider01 .floor.bg-green .link .t01,
+.r-sider01 .floor.bg-green .link .t02{color:#fff;}
+
+.r-sider01 .floor.f00 .link{background:url(#{$baseImgUrl}sideBarbg03.png) no-repeat 50% 50%;line-height: 55px;}
+.r-sider01 .floor.f01 .link{background:url(#{$baseImgUrl}icon01.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f02 .link{background:url(#{$baseImgUrl}icon02.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f03 .link{background:url(#{$baseImgUrl}icon03.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f04 .link{background:url(#{$baseImgUrl}icon04.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f05 .link{background:url(#{$baseImgUrl}icon05.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f06 .link{background:url(#{$baseImgUrl}icon06.png) no-repeat 19% 50%;}
+
+.r-sider01 .floor.f01.on .link{background:url(#{$baseImgUrl}1.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f02.on .link{background:url(#{$baseImgUrl}2.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f03.on .link{background:url(#{$baseImgUrl}3.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f04.on .link{background:url(#{$baseImgUrl}4.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f05.on .link{background:url(#{$baseImgUrl}5.png) no-repeat 19% 50%;}
+.r-sider01 .floor.f06.on .link{background:url(#{$baseImgUrl}6.png) no-repeat 19% 50%;}
+
+.big-title{font-size: 25px;}
+
+/*01*//*.f02~*/.r-sider01 .floor:not(:last-child){border-bottom: 1px solid #ddd}
+
+/*r-sider01 end*/
+
+/*sbcontent02 start*/
+.sbcontent02{padding-top: 28px;}
+.sbcontent02 .abtn-wrapper{
+  float: left;
+  width:33.33%;height: 100px;
+}
+.sbcontent02 .a02-btn{
+  height: 100%;
+  width:100%;
+  text-align: center;
+  line-height: 160px;
+  display: block;
+}
+.sbcontent02 .abtn-wrapper.on{color:#fff;background-color: #6eb92b;}
+.sbcontent02 .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn01.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn02.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn03.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn04.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn05.png) no-repeat 47% 35%;    }
+.sbcontent02 .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn06.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn01{background: url(#{$baseImgUrl}ibtn001.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn02{background: url(#{$baseImgUrl}ibtn002.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn03{background: url(#{$baseImgUrl}ibtn003.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn04{background: url(#{$baseImgUrl}ibtn004.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn05{background: url(#{$baseImgUrl}ibtn005.png) no-repeat 47% 35%;    }
+.sbcontent02 .abtn-wrapper.on .a02-btn.btn06{background: url(#{$baseImgUrl}ibtn006.png) no-repeat 47% 35%;    }
+/*sbcontent02 end*/
 
